--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,22 +1,17 @@
 {
-    "name": "my_app",
-    "short_name": "my_app",
+    "name": "suji",
+    "short_name": "suji",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "写下想说的话",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
+            "src": "icons/Icon-128.png",
+            "sizes": "128x128",
             "type": "image/png"
         }
     ]
