--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
 name: sfxui
-description: 写下想说的话
 
 publish_to: 'none'
 
@@ -11,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.1
-  cupertino_icons: ^1.0.0
+  http:
   provider:
+
+flutter:
+  uses-material-design: true
