--- a/src/sfx-server/Cargo.toml
+++ b/src/sfx-server/Cargo.toml
@@ -3,9 +3,7 @@ name = "sfx-server"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
-wasm-bindgen = "0.2"
 reqwest = { version = "0.11.9", features = ["blocking"] }
+axum = "0.4.6"
+tokio = { version = "1.0", features = ["full"] }
