--- a/projects/sfx-server/Cargo.toml
+++ b/projects/sfx-server/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 reqwest = { version = "0.11.9", features = ["blocking"] }
 axum = "0.4.6"
 tokio = { version = "1.0", features = ["full"] }
+handlebars = "4.2.1"
+serde_json = "1.0.79"
