--- a/projects/sfx-server/Cargo.toml
+++ b/projects/sfx-server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+libc = "0.2.119"
 reqwest = { version = "0.11.9", features = ["blocking"] }
 axum = "0.4.6"
 tokio = { version = "1.0", features = ["full"] }
