--- a/projects/sfx-server/Cargo.toml
+++ b/projects/sfx-server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sfx-server"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 libc = "0.2.119"
@@ -10,3 +11,6 @@ axum = "0.4.6"
 tokio = { version = "1.0", features = ["full"] }
 handlebars = "4.2.1"
 serde_json = "1.0.79"
+
+[build-dependencies]
+cmake = "0.1.48"
