恢复c++代码，两种语言在互相调用上实现起来并没有那么方便 本仓库变成半学习半生产性质

--- a/projects/sfx-server/CMakeLists.txt
+++ b/projects/sfx-server/CMakeLists.txt
@@ -1,15 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 project(sfx-server)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_VERBOSE_MAKEFILE on)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-# 优先查找静态库，保证 .a 后缀在前面，把默认的后缀加上
-#set(CMAKE_FIND_LIBRARY_SUFFIXES .
-set(CMAKE_PREFIX_PATH "/home/ubuntu/.nix-profile/lib")
-
-#find_package(PkgConfig REQUIRED)
+find_package(PkgConfig REQUIRED)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 if (Boost_FOUND)
@@ -17,30 +13,29 @@ if (Boost_FOUND)
     LINK_LIBRARIES(${Boost_LIBRARIES})
 endif (Boost_FOUND)
 
-#find_package(AWSSDK REQUIRED COMPONENTS s3 appconfig appconfigdata)
+find_package(folly REQUIRED)
+if (folly_FOUND)
+    message(STATUS "Found folly: ${FOLLY_LIBRARIES}")
+    INCLUDE_DIRECTORIES(${folly_INCLUDE_DIRS})
+    LINK_LIBRARIES(${FOLLY_LIBRARIES})
+endif (folly_FOUND)
 
-add_library(sfx_server_common SHARED
-        src/lib.cc src/lib.h
-        #        src/services/config/aws/init.cpp src/services/config/aws/init.h
-        src/utils/md5.cc
+find_package(AWSSDK REQUIRED COMPONENTS s3 appconfig appconfigdata)
+
+add_executable(sfx-server
+        src/services/config/aws/init.cpp src/services/config/aws/init.h
+        src/main.cc
+        src/server/http_connection.cc
+        src/server/state.cc
+        src/utils/md5.cc src/server/handlers/index.cpp src/server/handlers/index.h
         src/utils/mime.h src/utils/mime.cpp
-        src/services/markdown/markdown.cpp src/services/markdown/markdown.h
-        src/services/markdown/mdtransform.hpp
-        #        src/services/config/aws/appconfig.cpp src/services/config/aws/appconfig.h
-        #        src/services/database/postgresql/pq.cpp src/services/database/postgresql/pq.h
-        #        src/services/database/postgresql/init.cpp src/services/database/postgresql/init.h
-        #        src/server/handlers/sitemap.cpp src/server/handlers/sitemap.h
-        src/models/article.cpp src/models/article.h
-        src/utils/datetime.cpp src/utils/datetime.h)
+        src/services/markdown/markdown.cpp src/services/markdown/mdtransform.hpp src/services/markdown/markdown.h
+        src/services/config/aws/appconfig.cpp src/services/config/aws/appconfig.h src/services/database/postgresql/pq.cpp
+        src/services/database/postgresql/pq.h src/services/database/postgresql/init.cpp src/services/database/postgresql/init.h src/server/handlers/sitemap.cpp src/server/handlers/sitemap.h src/models/article.cpp src/models/article.h src/utils/datetime.cpp src/utils/datetime.h)
 
 find_library(PQXX_LIB pqxx)
 find_library(PQ_LIB pq)
 
-target_link_libraries(sfx_server_common ${AWSSDK_LINK_LIBRARIES} ${AWSSDK_PLATFORM_DEPS})
-target_link_libraries(sfx_server_common ${PQXX_LIB} ${PQ_LIB})
-#install(TARGETS sfx_server_common DESTINATION .)
+target_link_libraries(sfx-server ${AWSSDK_LINK_LIBRARIES} ${AWSSDK_PLATFORM_DEPS})
+target_link_libraries(sfx-server ${PQXX_LIB} ${PQXX_LIB})
 
-
-add_executable(sfx_server src/bin/main.cc)
-target_link_libraries(sfx_server sfx_server_common)
-add_dependencies(sfx_server sfx_server_common)
