添加了使用自定义字体和居中对齐示例

--- a/projects/sfx-client/pubspec.yaml
+++ b/projects/sfx-client/pubspec.yaml
@@ -16,3 +16,7 @@ dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Cookie
+      fonts:
+        - asset: assets/fonts/Cookie-Regular.ttf
