--- a/projects/sfx-client/web/package.json
+++ b/projects/sfx-client/web/package.json
@@ -2,7 +2,7 @@
   "name": "sfxui",
   "version": "1.0.0",
   "workspaces": [
-    "pkg"
+    "packages/**"
   ],
   "scripts": {
     "dev": "vite",
