增加前端debug页面

--- a/projects/sfx-client/web/package.json
+++ b/projects/sfx-client/web/package.json
@@ -5,7 +5,7 @@
     "packages/**"
   ],
   "scripts": {
-    "dev": "vite",
+    "debug": "vite",
     "build": "vite build --watch"
   },
   "dependencies": {
