--- a/projects/sfx-client/common/Cargo.toml
+++ b/projects/sfx-client/common/Cargo.toml
@@ -8,3 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+rand = { version = "0.8.5", features = ["getrandom"] }
+getrandom = { version = "0.2.0", features = ["js"] }
+js-sys = "0.3.56"
+web-sys = { version = "0.3.0", features = ["console"] }
