--- a/projects/sfx-client/package.json
+++ b/projects/sfx-client/package.json
@@ -12,6 +12,8 @@
     "@pnnh/hello-wasm": "^0.1.0"
   },
   "devDependencies": {
-    "vite": "^2.7.1"
+    "vite": "^2.7.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
