--- a/projects/sfx-client/common/Cargo.toml
+++ b/projects/sfx-client/common/Cargo.toml
@@ -12,3 +12,4 @@ rand = { version = "0.8.5", features = ["getrandom"] }
 getrandom = { version = "0.2.0", features = ["js"] }
 js-sys = "0.3.56"
 web-sys = { version = "0.3.0", features = ["console"] }
+console_error_panic_hook = "0.1.7"
