--- a/projects/sfx-client/package.json
+++ b/projects/sfx-client/package.json
@@ -5,15 +5,12 @@
     "common/pkg"
   ],
   "scripts": {
-    "debug": "vite",
-    "build": "vite build --watch"
+    "build": "vite build"
   },
   "dependencies": {
     "@pnnh/hello-wasm": "^0.1.0"
   },
   "devDependencies": {
-    "vite": "^2.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "vite": "^2.7.1"
   }
 }
