--- a/projects/sfx-client/common/CMakeLists.txt
+++ b/projects/sfx-client/common/CMakeLists.txt
@@ -52,3 +52,5 @@ qt_finalize_executable(${PROJECT_NAME})
 
 add_executable(cmain src/main.c)
 target_link_libraries(cmain hello_wasm)
+
+add_subdirectory(src/hello_world)
