--- a/projects/sfx-common/CMakeLists.txt
+++ b/projects/sfx-common/CMakeLists.txt
@@ -17,6 +17,8 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 link_directories(${PROJECT_SOURCE_DIR}/lib)
 
+find_package(PkgConfig REQUIRED)
+
 # Mac系统使用内置的pthreads
 IF(APPLE)
     set(CMAKE_THREAD_LIBS_INIT "-lpthread")
@@ -56,41 +58,28 @@ target_link_libraries(cmain hello_wasm)
 add_subdirectory(src/hello_world)
 add_subdirectory(src/bin/structs_library)
 
+if (NOT EMSCRIPTEN)
 
-find_package(Boost COMPONENTS system thread REQUIRED)
-if (Boost_FOUND)
-    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-    LINK_LIBRARIES(${Boost_LIBRARIES})
-endif (Boost_FOUND)
+    find_package(Boost COMPONENTS system thread REQUIRED)
 
-find_package(folly REQUIRED)
-if (folly_FOUND)
-    INCLUDE_DIRECTORIES(${folly_INCLUDE_DIRS})
-    LINK_LIBRARIES(${FOLLY_LIBRARIES})
-endif (folly_FOUND)
+    pkg_check_modules(ctemplate REQUIRED IMPORTED_TARGET libctemplate)
 
-find_package(AWSSDK REQUIRED COMPONENTS s3 appconfig appconfigdata)
+    add_executable(sfx-server
+            src/services/config/aws/init.cpp src/services/config/aws/init.h
+            src/main.cc
+            src/server/http_connection.cc
+            src/server/state.cc
+            src/utils/md5.cc src/server/handlers/index.cpp src/server/handlers/index.h
+            src/utils/mime.h src/utils/mime.cpp
+            src/services/markdown/markdown.cpp src/services/markdown/mdtransform.hpp src/services/markdown/markdown.h
+            src/services/config/aws/appconfig.cpp src/services/config/aws/appconfig.h src/services/database/postgresql/pq.cpp
+            src/services/database/postgresql/pq.h src/services/database/postgresql/init.cpp
+            src/services/database/postgresql/init.h src/server/handlers/sitemap.cpp src/server/handlers/sitemap.h
+            src/models/article.cpp src/models/article.h src/utils/datetime.cpp src/utils/datetime.h
+            src/utils/ctemplate.cc src/utils/ctemplate.h)
 
-pkg_check_modules(ctemplate REQUIRED IMPORTED_TARGET libctemplate)
-message(STATUS "=== OBS_LIBRARIES: }" PkgConfig::ctemplate)
-add_executable(sfx-server
-        src/services/config/aws/init.cpp src/services/config/aws/init.h
-        src/main.cc
-        src/server/http_connection.cc
-        src/server/state.cc
-        src/utils/md5.cc src/server/handlers/index.cpp src/server/handlers/index.h
-        src/utils/mime.h src/utils/mime.cpp
-        src/services/markdown/markdown.cpp src/services/markdown/mdtransform.hpp src/services/markdown/markdown.h
-        src/services/config/aws/appconfig.cpp src/services/config/aws/appconfig.h src/services/database/postgresql/pq.cpp
-        src/services/database/postgresql/pq.h src/services/database/postgresql/init.cpp
-        src/services/database/postgresql/init.h src/server/handlers/sitemap.cpp src/server/handlers/sitemap.h
-        src/models/article.cpp src/models/article.h src/utils/datetime.cpp src/utils/datetime.h
-        src/utils/ctemplate.cc src/utils/ctemplate.h)
+    target_include_directories(sfx-server PRIVATE ${Boost_INCLUDE_DIRS})
+    target_link_libraries(sfx-server ${Boost_LIBRARIES} PkgConfig::ctemplate)
 
-find_library(PQXX_LIB pqxx)
-find_library(PQ_LIB pq)
-
-target_link_libraries(sfx-server ${AWSSDK_LINK_LIBRARIES} ${AWSSDK_PLATFORM_DEPS})
-target_link_libraries(sfx-server ${PQXX_LIB} ${PQXX_LIB})
-target_link_libraries(sfx-server PkgConfig::ctemplate)
+endif()
 
