--- a/projects/sfx-common/Cargo.toml
+++ b/projects/sfx-common/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hello-wasm"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
+build = "build/build.rs"
 
 [lib]
 crate-type = ["cdylib"]
