调整目录结构，将原静态页面的样式拷贝至本项目

--- a/projects/sfx-client/pubspec.yaml
+++ b/projects/sfx-client/pubspec.yaml
@@ -12,7 +12,7 @@ flutter:
   fonts:
     - family: Cookie
       fonts:
-        - asset: static/fonts/Cookie-Regular.ttf
+        - asset: fonts/Cookie-Regular.ttf
 
 dependencies:
   flutter:
