增加hive数据库操作示例

--- a/projects/sfx-client/pubspec.yaml
+++ b/projects/sfx-client/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   js:
   path:
   ffi:
+  hive:
+  hive_flutter:
 
 dev_dependencies:
   flutter_lints:
+  hive_generator:
+  build_runner:
