调整前端项目目录结构

--- a/projects/sfx-client/web/package.json
+++ b/projects/sfx-client/web/package.json
@@ -2,7 +2,7 @@
   "name": "sfxui",
   "version": "1.0.0",
   "workspaces": [
-    "common/pkg"
+    "../common/pkg"
   ],
   "scripts": {
     "build": "vite build --watch"
