--- a/projects/sfx-client/pubspec.yaml
+++ b/projects/sfx-client/pubspec.yaml
@@ -13,6 +13,11 @@ flutter:
     - family: Cookie
       fonts:
         - asset: fonts/Cookie-Regular.ttf
+  assets:
+    - images/avatar.jpeg
+    - images/svg/todo.svg
+    - images/svg/calendar.svg
+    - images/svg/booklet.svg
 
 dependencies:
   flutter:
@@ -25,7 +30,7 @@ dependencies:
   ffi:
   hive:
   hive_flutter:
-  desktop_window:
+  flutter_svg:
 
 dev_dependencies:
   flutter_lints:
