实现左侧第二列过滤菜单，点击可改变焦点，实现鼠标滑动等

--- a/projects/sfx-client/pubspec.yaml
+++ b/projects/sfx-client/pubspec.yaml
@@ -18,6 +18,9 @@ flutter:
     - images/svg/todo.svg
     - images/svg/calendar.svg
     - images/svg/booklet.svg
+    - images/svg/wallet.svg
+    - images/svg/calendar_todo.svg
+    - images/svg/bill.svg
 
 dependencies:
   flutter:
