--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -24,6 +24,8 @@ flutter:
     - images/svg/sun.svg
     - images/svg/archive_drawer.svg
     - images/svg/stack.svg
+    - images/svg/menu_fold.svg
+    - images/svg/menu_unfold.svg
     - images/ui/empty.png
 
 dependencies:
