笔记详情上方增加设置提醒按钮

--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
     - images/svg/menu_fold.svg
     - images/svg/menu_unfold.svg
     - images/ui/empty.png
+    - images/svg/calendar_2.svg
 
 dependencies:
   flutter:
