加入datepicker示例代码，实现点击设置日期按钮呈现日期选择框

--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   isar:
   isar_flutter_libs:
   bitsdojo_window:
+  syncfusion_flutter_datepicker:
 
 dev_dependencies:
   flutter_lints:
