Revert "将服务端库和客户端库分成两个项目"
This reverts commit c228ec505db030ad6b63af63f21e70427f46da13.

--- a/projects/client/web/package.json
+++ b/projects/client/web/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sfxui",
   "version": "1.0.0",
+  "workspaces": [
+    "../common/pkg"
+  ],
   "scripts": {
     "build": "vite build --watch"
   },
