简单实现路由返回功能

--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 flutter:
   uses-material-design: true
@@ -38,8 +38,8 @@ dependencies:
     sdk: flutter
   http:
   provider:
-  url_launcher: ^6.0.20
-  js:
+  url_launcher: 6.0.20
+  js: 0.6.3
   path:
   ffi:
   hive:
