--- a/projects/couch/package.json
+++ b/projects/couch/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "workspaces": [
   ],
+  "files": [
+    "dream_bg.wasm",
+    "dream.js",
+    "dream.d.ts"
+  ],
+  "main": "dream.js",
+  "module": "dream.js",
+  "types": "dream.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --watch"
+    "build": "tsc && rollup --config"
   },
   "dependencies": {
   },
@@ -13,6 +21,13 @@
     "@rollup/plugin-strip": "^2.1.0",
     "typescript": "^4.3.2",
     "@types/node": "^17.0.2",
-    "vite": "^2.7.1"
+    "vite": "^2.7.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "rollup": "^2.61.1",
+    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-visualizer": "^5.5.0"
   }
 }
