通过vite pre-binding实现了对emscripten生成js文件的引用，dev环境下需解决wasm文件路径问题。实际打包成库的时候，是不是也可以直接使用vite而不再需要rollup？

--- a/projects/couch/package.json
+++ b/projects/couch/package.json
@@ -2,6 +2,7 @@
   "name": "sfxui",
   "version": "1.0.0",
   "workspaces": [
+    "pkg"
   ],
   "files": [
     "dream_bg.wasm",
@@ -16,6 +17,7 @@
     "build": "tsc && rollup --config"
   },
   "dependencies": {
+    "@pnnh/couch": "^0.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-strip": "^2.1.0",
