--- a/projects/couch/package.json
+++ b/projects/couch/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "sfxui",
+  "name": "@pnnh/couch",
   "version": "1.0.0",
   "workspaces": [
     "pkg"
   ],
   "files": [
-    "dream_bg.wasm",
-    "dream.js",
-    "dream.d.ts"
+    "dist/couch.wasm",
+    "dist/index.js"
   ],
-  "main": "dream.js",
-  "module": "dream.js",
-  "types": "dream.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && rollup --config"
   },
   "dependencies": {
-    "@pnnh/couch": "^0.1.0"
   },
   "devDependencies": {
-    "@rollup/plugin-strip": "^2.1.0",
-    "typescript": "^4.3.2",
-    "@types/node": "^17.0.2",
-    "vite": "^2.7.1",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "^17.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-visualizer": "^5.5.0"
+    "rollup-plugin-visualizer": "^5.5.0",
+    "typescript": "^4.3.2",
+    "vite": "^2.7.1"
   }
 }
