--- a/projects/couch/package.json
+++ b/projects/couch/package.json
@@ -4,15 +4,12 @@
   "workspaces": [
     "pkg"
   ],
-  "files": [
-    "dist/couch.wasm",
-    "dist/index.js"
-  ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && rollup --config"
+    "build": "vite build"
   },
   "dependencies": {
+    "couch_bg": "^0.1.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
@@ -26,6 +23,6 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-visualizer": "^5.5.0",
     "typescript": "^4.3.2",
-    "vite": "^2.7.1"
+    "vite": "^2.9.1"
   }
 }
