--- a/projects/couch/CMakeLists.txt
+++ b/projects/couch/CMakeLists.txt
@@ -27,19 +27,21 @@ link_directories(${PROJECT_SOURCE_DIR}/lib)
 
 #qt6_add_executable(couch MANUAL_FINALIZATION src/main.cpp)
 #qt6_add_executable(couch src/main.cpp)
+find_package(Qt6 COMPONENTS Core REQUIRED)
 
 add_executable(couch  src/main.cpp
         src/wasm/wasm.cpp
         src/markdown/mdtransform.hpp
-        src/markdown/mdtransform.cpp)
-#target_link_libraries(couch PRIVATE Qt6::Core)
+        src/markdown/mdtransform.cpp
+        src/utils/md5.cc src/utils/md5.h)
+target_link_libraries(couch PRIVATE Qt6::Core)
 
 # 当编译WebAssembly时修改链接参数，否则会报初始内存太小错误
 if (EMSCRIPTEN)
     target_link_options(couch PRIVATE  "SHELL:-s TOTAL_MEMORY=32MB"
             "SHELL:-s MODULARIZE=1"
             "SHELL:-s EXPORT_NAME=Couch"
-            "SHELL:-lembind")
+            "SHELL:-l embind")
 endif ()
 
 #qt_finalize_executable(couch)
