--- a/projects/couch/pkg/package.json
+++ b/projects/couch/pkg/package.json
@@ -10,11 +10,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-strip": "^2.1.0",
-    "@rollup/plugin-url": "^6.1.0",
     "rollup": "^2.61.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-visualizer": "^5.5.0"
+    "rollup-plugin-copy": "^3.4.0"
   }
 }
