将npm示例项目移到单独文件夹，当输入内容改变时调用wasm的解析markdown方法，将解析内容输出到页面上 打包的npm包里增加ts类型声明

--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   bitsdojo_window:
   syncfusion_flutter_datepicker:
   syncfusion_flutter_calendar:
+  markdown: ^5.0.0
   pillow:
     path: ../pillow
 
