--- a/projects/couch/example/package.json
+++ b/projects/couch/example/package.json
@@ -2,14 +2,16 @@
   "name": "@pnnh/couch",
   "version": "1.0.0",
   "workspaces": [
-    "pkg"
+    "../pkg"
   ],
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
-    "couch_bg": "^0.1.0"
+    "couch_bg": "^0.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
@@ -17,11 +19,14 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/node": "^17.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-visualizer": "^5.5.0",
+    "sass": "^1.45.0",
     "typescript": "^4.3.2",
     "vite": "^2.9.1"
   }
