--- a/projects/couch/examples/web/package.json
+++ b/projects/couch/examples/web/package.json
@@ -2,7 +2,7 @@
   "name": "@pnnh/couch",
   "version": "1.0.0",
   "workspaces": [
-    "../pkg"
+    "../../pkg"
   ],
   "scripts": {
     "dev": "vite",
