--- a/projects/client/pubspec.yaml
+++ b/projects/client/pubspec.yaml
@@ -60,3 +60,11 @@ dev_dependencies:
   hive_generator:
   isar_generator:
   build_runner:
+  ffigen: ^4.1.3
+
+ffigen:
+  name: CouchLibrary
+  output: 'lib/gen/generated_bindings.dart'
+  headers:
+    entry-points:
+      - '../couch/out/include/markdown.h'
