修复native示例安装之后运行提示找不到动态库相关问题，需在示例项目和couch_shared项目中进行rpath相关设置

--- a/projects/couch/examples/native/CMakeLists.txt
+++ b/projects/couch/examples/native/CMakeLists.txt
@@ -10,8 +10,25 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/../../out/include)
 link_directories(${PROJECT_SOURCE_DIR}/../../out/lib)
 
-set(CMAKE_MACOSX_RPATH 1)
-set(CMAKE_BUILD_RPATH ${PROJECT_SOURCE_DIR}/../../out/lib)
+set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/out)
+
+#set(CMAKE_BUILD_RPATH ${PROJECT_SOURCE_DIR}/../../out/lib)
+set(CMAKE_INSTALL_RPATH ".")
+
+message(STATUS "CMAKE_INSTALL_PREFIX：${CMAKE_INSTALL_PREFIX}" )
 
 add_executable(example_native src/main.c)
 target_link_libraries(example_native PRIVATE couch_shared)
+
+set_target_properties(example_native PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+install(TARGETS example_native
+        RUNTIME_DEPENDENCY_SET example_native_dependencies
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}
+        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+
+install(RUNTIME_DEPENDENCY_SET example_native_dependencies
+        DESTINATION ${CMAKE_INSTALL_PREFIX}
+        PRE_EXCLUDE_REGEXES "*.h")
