--- a/projects/pillow/pubspec.yaml
+++ b/projects/pillow/pubspec.yaml
@@ -4,19 +4,7 @@ version: 0.0.1
 homepage: xyz.sfx.plw
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
-  flutter: ">=2.5.0"
-
-dependencies:
-  flutter:
-    sdk: flutter
-  flutter_web_plugins:
-    sdk: flutter
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
+  sdk: ">=2.16.0 <3.0.0"
 
 flutter:
   plugin:
@@ -36,5 +24,23 @@ flutter:
         pluginClass: PillowWeb
         fileName: pillow_web.dart
 
-  assets:
-    - web/dist/
+dependencies:
+  flutter:
+    sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  ffi:
+  ffigen: ^4.1.3
+
+dev_dependencies:
+  build_runner:
+  flutter_lints:
+  flutter_test:
+    sdk: flutter
+
+ffigen:
+  name: CouchLibrary
+  output: 'lib/gen/generated_bindings.dart'
+  headers:
+    entry-points:
+      - '../couch/out/include/markdown.h'
